DRT-6014 fix wrapping text on terminal dashboard

--- a/server/src/main/assets/stylesheets/main.less
+++ b/server/src/main/assets/stylesheets/main.less
@@ -1806,7 +1806,7 @@ div.access-restricted {
     float: left;
     margin-right: 3%;
     margin-top: 3%;
-    min-width: 272px;
+    min-width: 300px;
     width: 31.3%;
 }
 
